# terraform-gcp-enclave

./: .gitignore  .terraform-docs.yaml  .tool-versions  README.md  cost_export.tf  cost_sources.tf  justfile  main.tf  output.tf  provider.tf  pyproject.toml  relay_assets.tf  relay_audit.tf  relay_forwarder.tf  relay_scc.tf  service_accounts.tf  vars.tf
.github/: dependabot.yaml
.github/workflows/: ci.yml
relay_forwarder/: function.go  go.mod  go.sum  handler.py  main.py  relay.py  requirements.txt
relay_forwarder/relay/: cred.go  cred_test.go  relay.go  relay_test.go
relay_function/: main.tf  provider.tf  vars.tf
tests/: test_handler.py  test_relay.py
