[project]
name = "relay-forwarder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.60",
    "functions-framework==3.10.1",
    "google-auth==2.38.0",
    "google-cloud-logging==3.11.4",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "ruff==0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["relay_forwarder"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["relay_forwarder"]
mypy_path = ["relay_forwarder"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
